<?xml version="1.0" encoding="utf-8"?>
<!--fill parent: o tamanho de um elemento se ajusta ao tamanho do elemento acima (nível hierárquico)
    wrap content: ocupa o espaço necessário
    hint: equivale ao placeholder-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_launcher_round"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/iconeProj">
    </ImageView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textVw1"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp" />
    <EditText
        android:id="@+id/editText1"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/placeNome"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textVw2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp" />
    <EditText
        android:id="@+id/editText2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/placeIdade"
        android:inputType="number"
        android:autofillHints="name"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp" />

    <TextView
        android:id="@+id/textView3"
        android:text="@string/textVw3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>

    <RadioGroup
        android:id="@+id/radioGp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/opcFemale"
            android:layout_weight="1">
        </RadioButton>
        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcMale"
            android:layout_gravity="end">
        </RadioButton>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="22dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnSend"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnClean" />
    </LinearLayout>

</LinearLayout>